# language-server-mcp-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  run_example.sh
examples/: Cargo.toml  client.rs  test_file.rs
src/: lsp_client.rs  main.rs
